Add Layout component and add global styles.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/paulina-grunwald/portfolio-app#readme",
   "dependencies": {
     "next": "^7.0.2",
+    "nprogress": "^0.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
